<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}" >

    <ImageView
        android:id="@+id/img_Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/str_tripsitLogo"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/layout_menuButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_tripsitChannel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_tripsitChannel" />

        <Button
            android:id="@+id/btn_generalChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_generalChat" />

        <Button
            android:id="@+id/btn_factSheets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_factsheets" />

        <Button
            android:id="@+id/btn_wiki"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_wiki" />
    </LinearLayout>

</LinearLayout>